add: /game/:game_id (put)
