# schema/api.yml
@@ -62,6 +62,29 @@ paths:
           description: Bad Request
         '404':
           description: Not Found
+    put:
+      operationId: putGame
+      tags:
+        - game
+      summary: ゲームデータ変更API
+      description: 対象のゲームデータを変更する
+      parameters:
+        - in: path
+          name: gameId
+          required: true
+          schema:
+            type: integer
+            format: int64
+          description: 対象のゲームのID
+      requestBody:
+        $ref: '#/components/requestBodies/putGameRequest'
+      responses:
+        '200':
+          $ref: '#/components/responses/putGameResponse'
+        '400':
+          description: Bad Request
+        '404':
+          description: Not Found
   '/votes/{gameId}':
     get:
       operationId: getVote
@@ -223,6 +246,13 @@ components:
                 description: ゲーム名
             required:
               - name
+    putGameRequest:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Game'
+            required:
+              - id
     postVoteRequest:
       content:
         application/json:
@@ -263,6 +293,12 @@ components:
             $ref: '#/components/schemas/Game'
     getGameResponse:
       description: 対象のゲームのデータを返します
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Game'
+    putGameResponse:
+      description: 対象のゲームのデータを変更したものを返します
       content:
         application/json:
           schema:
